--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
           </section>
         </section>
 
-
+        <section>
+          <section style="padding-left: 3rem !important; padding-top: 6rem !important;" data-background-transition="none" data-background="images/lcarsSection.png" data-background-size="contain">
+            <h2>Section</h2>
+            <p>Section text</p>
+          </section>
+        </section>
         <section>
           <section data-background-transition="none" data-background="images/lcarsTitle.png" data-background-size="contain">
             <h2>Further reading</h2>
