Add styles for code samples.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
             <h2>Section</h2>
             <p>Section text</p>
           </section>
+          <section>
+            <h2>Code sample</h2>
+            <pre><code>void main() {
+  return 0;
+}</code></pre>
+          </section>
         </section>
         <section>
           <section data-background-transition="none" data-background="images/lcarsTitle.png" data-background-size="contain">
