Finished intro slide section, updated to use redshirt throughout.

--- a/index.html
+++ b/index.html
@@ -146,6 +146,39 @@
           <section data-transition="none">
             <img src="images/ineedmorepower10.png" />
           </section>
+          <section data-transition="none">
+            <img src="images/ineedmorepower10.png" />
+          </section>
+          <section data-transition="none">
+            <img src="images/opsflow1.png" />
+          </section>
+          <section data-transition="none">
+            <img src="images/opsflow2.png" />
+          </section>
+          <section data-transition="none">
+            <img src="images/opsflow3.png" />
+          </section>
+          <section data-transition="none">
+            <img src="images/opsflow4.png" />
+          </section>
+          <section data-transition="none">
+            <img src="images/opsflow5.png" />
+          </section>
+          <section data-transition="none">
+            <img src="images/opsflow6.png" />
+          </section>
+          <section data-transition="none">
+            <img src="images/opsflow7.png" />
+          </section>
+          <section data-transition="none">
+            <img src="images/opsflow8.png" />
+          </section>
+          <section data-transition="none">
+            <img src="images/operflow1.png" />
+          </section>
+          <section data-transition="none">
+            <img src="images/operflow2.png" />
+          </section>
           <section>
             <h3>What is an operator?</h3>
             <p class="fragment">Not a product...<span class="fragment">an API...</span><span class="fragment">or a library.</span></p>
