Added some fun graphics to header slides, pronoun to profile page.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </section>
         </section>
         <section>
-          <section style="padding-left: 3rem !important; padding-top: 6rem !important;" data-background-transition="none" data-background="images/lcarsSection.png" data-background-size="contain">
+          <section style="padding-left: 3rem !important; padding-top: 6rem !important;" data-background-transition="none" data-background="images/anotherDayInEngineering.png" data-background-size="contain">
             <h2>"I need warp speed now!"</h2>
             <p>Just another day in Engineering</p>
           </section>
@@ -394,7 +394,7 @@
         </section>
 
         <section>
-          <section style="padding-left: 3rem !important; padding-top: 6rem !important;" data-background-transition="none" data-background="images/lcarsSection.png" data-background-size="contain">
+          <section style="padding-left: 3rem !important; padding-top: 6rem !important;" data-background-transition="none" data-background="images/goldRedBlue.png" data-background-size="contain">
             <h2>Gold, Blue or Red?</h2>
             <p>Creating an API</p>
           </section>
@@ -480,7 +480,7 @@ spec:
         </section>
 
         <section>
-          <section style="padding-left: 3rem !important; padding-top: 6rem !important;" data-background-transition="none" data-background="images/lcarsSection.png" data-background-size="contain">
+          <section style="padding-left: 3rem !important; padding-top: 6rem !important;" data-background-transition="none" data-background="images/selfSealingStemBolts.png" data-background-size="contain">
             <h2>Self-sealing stem bolts</h2>
             <p>Writing the role</p>
           </section>
@@ -755,7 +755,7 @@ fatal: [localhost]: FAILED! => {"reason": "Could not find or access '/tmp/ansibl
         </section>
 
         <section>
-          <section style="padding-left: 3rem !important; padding-top: 6rem !important;" data-background-transition="none" data-background="images/lcarsSection.png" data-background-size="contain">
+          <section style="padding-left: 3rem !important; padding-top: 6rem !important;" data-background-transition="none" data-background="images/arch.png" data-background-size="contain">
             <h2>Computer, Arch</h2>
             <p>Stateful changes</p>
           </section>
