Minor changes to brand pages.

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <img src="images/operflow2.png" />
           </section>
           <section>
-            <h3>What is an operator?</h3>
+            <h3>What is <span class="fragment">(not)</span> an operator?</h3>
             <p class="fragment">Not a product...<span class="fragment">an API...</span><span class="fragment">or a library.</span></p>
           </section>
           <section data-transition="none">
