Update TEN7 branding and content.

--- a/index.html
+++ b/index.html
@@ -43,21 +43,22 @@
 					<section data-transition="none" data-background-transition="none" data-background="images/socketwench5.png" data-background-size="contain">
             &nbsp;
           </section>
-          <section data-background="images/t7-background.jpg" class="teamten7">
-            <img src="images/TEN7-logo.png" />
-            <p class="fragment">We create and care for<br />Drupal-powered websites.</p>
-            <p class="fragment">Minneapolis, MN <span class="fragment">(Mostly!)</span></p>
+          <section data-background="images/team.png" class="teamten7">
+            <img src="images/TEN7-logo.svg" width="200" />
+            <p class="fragment">Make Things That Matter</p>
+            <p class="fragment">100% Remote</p>
+            <p class="fragment">HQ in Minneapolis</p>
           </section>
-          <section data-background="images/t7-background.jpg" class="teamten7">
+          <section data-background="images/team.png" class="teamten7">
             <h2 class="ten7">Services</h2>
-            <p class="fragment">Site and hosting migratiton</p>
-            <p class="fragment">Drupal 9 upgrades</p>
-            <p class="fragment">Site audits</p>
-            <p class="fragment">Process consultantcy</p>
+            <p class="fragment">Strategy, Design, Development</p>
+            <p class="fragment">also...</p>
+            <p class="fragment">Support & Maintenance - Drupal & Wordpress</p>
+            <p class="fragment">Flight Deck - k8s powered hosting & local dev</p>
           </section>
-          <section data-background="images/t7-background.jpg" class="teamten7">
-            <img src="images/TEN7-logo.png" />
-            <p><a href="https://twitter.com/TEN7">@TEN7</a><br /><a href="mailto:hi@ten7.com">hi@ten7.com</a></p>
+          <section data-background="images/team.png" class="teamten7">
+            <img src="images/TEN7-logo.svg" width="200" />
+            <p><a href="https://twitter.com/TEN7">@TEN7</a><br /><br /><a href="mailto:hi@ten7.com">hi@ten7.com</a></p>
           </section>
         </section>
         <section>
